tests/compile_failures/empty_splitbits.rs
use splitbits::*;

fn main() {
    splitbits!();
}
